@@ -5019,6 +5019,7 @@ e @command{gawk} non ha pi@`u bisogno di usare @env{AWKPATH}.
 @node AWKLIBPATH (Variabile)
 @subsection Ricerca di librerie condivise @command{awk} su varie directory.
 @cindex @env{AWKLIBPATH} (variabile d'ambiente)
+@cindex variabili d'ambiente @subentry @env{AWKLIBPATH}
 @cindex directory @subentry ricerca di estensioni caricabili
 @cindex percorso di ricerca @subentry per estensioni
 @cindex differenze tra @command{awk} e @command{gawk} @subentry @code{AWKLIBPATH} (variabile d'ambiente)
@@ -5881,7 +5882,7 @@ vengono elaborate solo due cifre.
 @cindex @code{\} (barra inversa) @subentry @code{\/} (sequenza di protezione)
 @cindex barra inversa (@code{\}) @subentry @code{\/} (sequenza di protezione)
 @item \/
-Una barra (dovrebbe essere usato solo per costanti @dfn{regexp}).
+Una barra (dovrebbe essere usata solo per costanti @dfn{regexp}).
 Questa sequenza si usa per inserire una costante @dfn{regexp}
 che contiene una barra
 (come @code{/.*:\/home\/[[:alnum:]]+:.*/}; la notazione @samp{[[:alnum:]]}
@@ -21561,7 +21562,6 @@ ma dipende dall'utente la loro definizione
 * Esempio di funzione::         Un esempio di definizione di
                                 funzione e spiegazione della stessa.
 * Chiamata di una funzione::    Chiamare funzioni definite dall'utente.
-* Precisazioni sulle funzioni:: Cose a cui prestare attenzione.
 * Istruzione return::           Specificare il valore che una
                                 funzione restituisce.
 * Variabili di tipo dinamico::  Come cambiare tipo a una variabile in
@@ -34436,7 +34436,7 @@ un'estensione che sfrutta uno spazio-dei-nomi condiviso fra del
 codice scritto in C e del codice @command{awk}, che collaborano
 fra loro.
 
-@node Sommario dello Spazio-dei-nomi
+@node Sommario sugli spazi-dei-nomi
 @section Sommario
 
 @itemize @value{BULLET}
