@@ -1,3 +1,7 @@
+2020-05-04         Marco Curreli              <marcocurreli@tiscali.it>
+
+	* gawktexi.in: Updated.
+
 2020-04-19         Antonio Giovanni Colombo   <azc100@gmail.com>
 
 	* gawk.1: Updated.
